--- a/part4/project/backend/manifests/configmap.yaml
+++ b/part4/project/backend/manifests/configmap.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  namespace: project
+  namespace: default
   name: configmap
 data:
   POSTGRES_USER: user
