--- a/part4/project/backend/manifests/secret.yaml
+++ b/part4/project/backend/manifests/secret.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Secret
 metadata:
-    namespace: project
+    namespace: default
     name: dbpassword
 data:
     POSTGRES_PASSWORD: password
