--- a/part4/project/backend/manifests/statefulset.yaml
+++ b/part4/project/backend/manifests/statefulset.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  namespace: project
+  namespace: default
   name: postgres-svc
   labels:
     app: postgres
@@ -16,7 +16,7 @@ spec:
 apiVersion: apps/v1
 kind: StatefulSet
 metadata:
-  namespace: project
+  namespace: default
   name: postgres-ss
 spec:
   serviceName: postgres
