--- a/part4/project/webserver/manifests/ingress.yaml
+++ b/part4/project/webserver/manifests/ingress.yaml
@@ -1,7 +1,7 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  namespace: project
+  namespace: default
   name: ingress
 spec:
   rules:
