--- a/part4/project/webserver/manifests/persistentvolumeclaim.yaml
+++ b/part4/project/webserver/manifests/persistentvolumeclaim.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  namespace: project
+  namespace: default
   name: image-claim
 spec:
   accessModes:
