--- a/part4/project/webserver/manifests/service.yaml
+++ b/part4/project/webserver/manifests/service.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  namespace: project
+  namespace: default
   name: webserver-svc
 spec:
   type: NodePort
