--- a/part4/project/urlcronjob/manifests/cronjob.yaml
+++ b/part4/project/urlcronjob/manifests/cronjob.yaml
@@ -1,7 +1,7 @@
 apiVersion: batch/v1
 kind: CronJob
 metadata:
-  namespace: project
+  namespace: default
   name: cronjob
 spec:
   schedule: "0 0 * * *"
