--- a/part4/project/broadcaster/manifests/deployment.yaml
+++ b/part4/project/broadcaster/manifests/deployment.yaml
@@ -1,7 +1,7 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  namespace: project
+  namespace: default
   name: broadcaster-dep
 spec:
   replicas: 2
