--- a/part4/project/broadcaster/manifests/secret.yaml
+++ b/part4/project/broadcaster/manifests/secret.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Secret
 metadata:
-    namespace: project
+    namespace: default
     name: broadcaster-secrets
 stringData:
     TG_API_KEY: "5447181216:AAFs0c3_ep7mVlTBHBTMI6mnjQWe_iMiAkU"
