--- a/part4/project/urlcronjob/manifests/cronjob.yaml
+++ b/part4/project/urlcronjob/manifests/cronjob.yaml
@@ -11,5 +11,5 @@ spec:
         spec:
           containers:
           - name: cronjob
-            image: tonip57/urlcronjob
+            image: IMAGE_PLACEHOLDER
           restartPolicy: OnFailure
