--- a/part4/project/urlcronjob/manifests/kustomization.yaml
+++ b/part4/project/urlcronjob/manifests/kustomization.yaml
@@ -1,7 +1,7 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-- deployment.yaml
+- cronjob.yaml
 images:
 - name: IMAGE_PLACEHOLDER
   newName: tonip57/urlcronjob
