--- a/part4/project/webserver/manifests/analysistemplate.yaml
+++ b/part4/project/webserver/manifests/analysistemplate.yaml
@@ -6,10 +6,10 @@ metadata:
 spec:
   metrics:
   - name: rate
-    initialDelay: 10m
+    initialDelay: 1m
     successCondition: result < 2
     provider:
       prometheus:
        address: http://kube-prometheus-stack-1658-prometheus.prometheus.svc.cluster.local:9090
         query: |
-          scalar(sum(rate(container_cpu_usage_seconds_total{namespace="project", container=~"project.*"}[8m])))
+          scalar(sum(rate(container_cpu_usage_seconds_total{namespace="default"}[1m])))
