--- a/part4/project/backend/manifests/rollout.yaml
+++ b/part4/project/backend/manifests/rollout.yaml
@@ -36,6 +36,9 @@ spec:
               path: /healthz
               port: 3301
           resources:
+            requests:
+              cpu: "80m"
+              memory: "80Mi"
             limits:
               cpu: "250m"
               memory: "250Mi"
