--- a/part4/project/webserver/manifests/rollout.yaml
+++ b/part4/project/webserver/manifests/rollout.yaml
@@ -40,6 +40,9 @@ spec:
               path: /healthz
               port: 3300
           resources:
+            requests:
+              cpu: "80m"
+              memory: "80Mi"
             limits:
               cpu: "250m"
               memory: "250Mi"
