--- a/part4/project/webserver/manifests/kustomization.yaml
+++ b/part4/project/webserver/manifests/kustomization.yaml
@@ -1,6 +1,7 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
+- analysistemplate.yaml
 - deployment.yaml
 - ingress.yaml
 - persistentvolumeclaim.yaml
