--- a/part4/project/webserver/manifests/kustomization.yaml
+++ b/part4/project/webserver/manifests/kustomization.yaml
@@ -2,7 +2,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
 - analysistemplate.yaml
-- deployment.yaml
+- rollout.yaml
 - ingress.yaml
 - persistentvolumeclaim.yaml
 - service.yaml
